server_log.txt
file:///C:/Users/1225s/Desktop/dev/RPG%E3%83%84%E3%82%AF%E3%83%BC%E3%83%ABMZ%EF%BC%BFMCP/index.js:1237
          }
          ^

SyntaxError: Missing catch or finally after try
    at compileSourceTextModule (node:internal/modules/esm/utils:346:16)
    at ModuleLoader.moduleStrategy (node:internal/modules/esm/translators:107:18)
    at #translate (node:internal/modules/esm/loader:536:12)
    at ModuleLoader.loadAndTranslate (node:internal/modules/esm/loader:583:27)
    at async ModuleJob._link (node:internal/modules/esm/module_job:162:19)

Node.js v22.18.0
file:///C:/Users/1225s/Desktop/dev/RPG%E3%83%84%E3%82%AF%E3%83%BC%E3%83%ABMZ%EF%BC%BFMCP/index.js:1415
      } catch (error) {
        ^^^^^

SyntaxError: Unexpected token 'catch'
    at compileSourceTextModule (node:internal/modules/esm/utils:346:16)
    at ModuleLoader.moduleStrategy (node:internal/modules/esm/translators:107:18)
    at #translate (node:internal/modules/esm/loader:536:12)
    at ModuleLoader.loadAndTranslate (node:internal/modules/esm/loader:583:27)
    at async ModuleJob._link (node:internal/modules/esm/module_job:162:19)

Node.js v22.18.0
file:///C:/Users/1225s/Desktop/dev/RPG%E3%83%84%E3%82%AF%E3%83%BC%E3%83%ABMZ%EF%BC%BFMCP/index.js:361
      {
      ^

SyntaxError: Unexpected token '{'
    at compileSourceTextModule (node:internal/modules/esm/utils:346:16)
    at ModuleLoader.moduleStrategy (node:internal/modules/esm/translators:107:18)
    at #translate (node:internal/modules/esm/loader:536:12)
    at ModuleLoader.loadAndTranslate (node:internal/modules/esm/loader:583:27)
    at async ModuleJob._link (node:internal/modules/esm/module_job:162:19)

Node.js v22.18.0
Processing tool: run_playtest
Processing tool: run_playtest
Processing tool: run_playtest
RPG Maker MZ MCP Server running on stdio
RPG Maker MZ MCP Server running on stdio
